--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,2 +1,2 @@
 <app-grupos (grupoClicado)="listarGrupo($event)"></app-grupos>
-<app-lista-de-produtos [grupoAtivo]="*"></app-lista-de-produtos>
+<app-lista-de-produtos #lista></app-lista-de-produtos>
