--- a/src/app/components/lista-de-produtos/lista-de-produtos.component.html
+++ b/src/app/components/lista-de-produtos/lista-de-produtos.component.html
@@ -1,3 +1,3 @@
 <div>
-<app-produto *ngFor = "let p of produtos" [produto]="p"></app-produto>
+<app-produto *ngFor = "let p of produtosExibidos" [produto]="p"></app-produto>
 </div>
