--- a/src/app/components/grupos/grupos.component.html
+++ b/src/app/components/grupos/grupos.component.html
@@ -1,5 +1,5 @@
 <ul>
     <li *ngFor = "let g of grupos">
-        <a href="#" (click) = "grupoClicado.emit(g)">{{g.descricao}}</a>
+        <a (click) = "grupoClicado.emit(g)">{{g.descricao}}</a>
     </li>
 </ul>
